@@ -22,12 +22,11 @@ import java.awt.Dimension;
 import java.awt.FlowLayout;
 import java.awt.GridBagConstraints;
 import java.awt.event.ItemEvent;
-import java.awt.event.ItemListener;
 import java.io.File;
-import java.util.List;
 
 import javax.swing.Box;
 import javax.swing.BoxLayout;
+import javax.swing.ImageIcon;
 import javax.swing.JButton;
 import javax.swing.JCheckBox;
 import javax.swing.JComboBox;
@@ -39,97 +38,61 @@ import javax.swing.JTextArea;
 import javax.swing.JTextField;
 import javax.swing.SpinnerNumberModel;
 import javax.swing.SwingUtilities;
-import javax.swing.event.ChangeEvent;
-import javax.swing.event.ChangeListener;
 
 import org.mini2Dx.gettext.GetText;
 
 import com.atlauncher.App;
 import com.atlauncher.builders.HTMLBuilder;
-import com.atlauncher.constants.Constants;
 import com.atlauncher.constants.UIConstants;
-import com.atlauncher.evnt.listener.RelocalizationListener;
-import com.atlauncher.evnt.listener.SettingsListener;
-import com.atlauncher.evnt.manager.RelocalizationManager;
-import com.atlauncher.evnt.manager.SettingsManager;
+import com.atlauncher.data.CheckState;
+import com.atlauncher.data.ScreenResolution;
 import com.atlauncher.gui.components.JLabelWithHover;
-import com.atlauncher.managers.ConfigManager;
+import com.atlauncher.listener.DelayedSavingKeyListener;
+import com.atlauncher.listener.StatefulTextKeyAdapter;
 import com.atlauncher.managers.DialogManager;
 import com.atlauncher.utils.ComboItem;
-import com.atlauncher.utils.Java;
 import com.atlauncher.utils.OS;
-import com.atlauncher.utils.javafinder.JavaInfo;
+import com.atlauncher.utils.Utils;
+import com.atlauncher.viewmodel.impl.settings.JavaSettingsViewModel;
 
-@SuppressWarnings("serial")
-public class JavaSettingsTab extends AbstractSettingsTab implements RelocalizationListener, SettingsListener {
-    private JLabelWithHover initialMemoryLabel;
-    private JSpinner initialMemory;
-    private JLabelWithHover initialMemoryLabelWarning;
+public class JavaSettingsTab extends AbstractSettingsTab {
+    private final JavaSettingsViewModel viewModel;
 
-    private final JLabelWithHover maximumMemoryLabel;
-    private final JSpinner maximumMemory;
-
-    private final JLabelWithHover permGenLabel;
-    private final JSpinner permGen;
-
-    private final JLabelWithHover windowSizeLabel;
-    private final JSpinner widthField;
-    private final JSpinner heightField;
-    private final JComboBox<String> commonScreenSizes;
-    private final JLabelWithHover javaPathLabel;
     private JTextField javaPath;
-    private final JComboBox<ComboItem<JavaInfo>> installedJavasComboBox;
-    private final JButton javaPathResetButton;
-    private final JButton javaBrowseButton;
-    private final JLabelWithHover javaParametersLabel;
-    private final JTextArea javaParameters;
-    private final JButton javaParametersResetButton;
-    private final JLabelWithHover startMinecraftMaximisedLabel;
-    private final JCheckBox startMinecraftMaximised;
-    private final JLabelWithHover ignoreJavaOnInstanceLaunchLabel;
-    private final JCheckBox ignoreJavaOnInstanceLaunch;
-    private final JLabelWithHover useJavaProvidedByMinecraftLabel;
-    private final JCheckBox useJavaProvidedByMinecraft;
-    private final JTextField baseJavaInstallFolder;
-    private final JLabelWithHover disableLegacyLaunchingLabel;
-    private final JCheckBox disableLegacyLaunching;
-    private final JLabelWithHover useSystemGlfwLabel;
-    private final JCheckBox useSystemGlfw;
-    private final JLabelWithHover useSystemOpenAlLabel;
-    private final JCheckBox useSystemOpenAl;
-    private JLabelWithHover useDedicatedGpuLabel;
-    private JCheckBox useDedicatedGpu;
+    private JLabelWithHover javaPathChecker;
+    private JLabelWithHover javaParamChecker;
+    private JTextArea javaParameters;
 
-    private boolean initialMemoryWarningShown = false;
-    private boolean permgenWarningShown = false;
+    public JavaSettingsTab(JavaSettingsViewModel viewModel) {
+        this.viewModel = viewModel;
+    }
 
-    public JavaSettingsTab() {
-        int systemRam = OS.getSystemRam();
+    @Override
+    protected void onShow() {
+        Integer systemRam = viewModel.getSystemRam();
+        Integer maximumSystemRamForSpinnerModels = systemRam == null || systemRam == 0 ? null : systemRam;
 
-        RelocalizationManager.addListener(this);
-        SettingsManager.addListener(this);
-
-        if (ConfigManager.getConfigItem("removeInitialMemoryOption", false) == false) {
+        if (viewModel.useInitialMemoryOption()) {
             // Initial Memory Settings
             gbc.gridx = 0;
             gbc.gridy++;
             gbc.insets = UIConstants.LABEL_INSETS;
             gbc.anchor = GridBagConstraints.BASELINE_TRAILING;
 
-            initialMemoryLabelWarning = new JLabelWithHover(WARNING_ICON,
+            JLabelWithHover initialMemoryLabelWarning = new JLabelWithHover(WARNING_ICON,
                     new HTMLBuilder().center().split(100).text(GetText
                             .tr("You're running a 32 bit Java and therefore cannot use more than 1GB of Ram. Please see http://atl.pw/32bit for help."))
                             .build(),
                     RESTART_BORDER);
 
-            initialMemoryLabel = new JLabelWithHover(GetText.tr("Initial Memory/Ram") + ":", HELP_ICON,
+            JLabelWithHover initialMemoryLabel = new JLabelWithHover(GetText.tr("Initial Memory/Ram") + ":", HELP_ICON,
                     new HTMLBuilder().center().split(100).text(GetText.tr(
                             "Initial memory/ram is the starting amount of memory/ram to use when starting Minecraft. This should be left at the default of 512 MB unless you know what your doing."))
                             .build());
 
             JPanel initialMemoryPanel = new JPanel();
             initialMemoryPanel.setLayout(new FlowLayout(FlowLayout.RIGHT, 0, 0));
-            if (!Java.is64Bit()) {
+            if (viewModel.isJava32Bit()) {
                 initialMemoryPanel.add(initialMemoryLabelWarning);
             }
             initialMemoryPanel.add(initialMemoryLabel);
@@ -141,33 +104,27 @@ public class JavaSettingsTab extends AbstractSettingsTab implements Relocalizati
             gbc.anchor = GridBagConstraints.BASELINE_LEADING;
             SpinnerNumberModel initialMemoryModel = new SpinnerNumberModel(App.settings.initialMemory, null, null, 128);
             initialMemoryModel.setMinimum(128);
-            initialMemoryModel.setMaximum((systemRam == 0 ? null : systemRam));
-            initialMemory = new JSpinner(initialMemoryModel);
+            initialMemoryModel.setMaximum(maximumSystemRamForSpinnerModels);
+            JSpinner initialMemory = new JSpinner(initialMemoryModel);
             ((JSpinner.DefaultEditor) initialMemory.getEditor()).getTextField().setColumns(5);
-            initialMemory.addChangeListener(new ChangeListener() {
-                @Override
-                public void stateChanged(ChangeEvent e) {
-                    JSpinner s = (JSpinner) e.getSource();
-                    // if initial memory is larger than maximum memory, make maximum memory match
-                    if ((Integer) s.getValue() > (Integer) maximumMemory.getValue()) {
-                        maximumMemory.setValue((Integer) s.getValue());
-                    }
+            initialMemory.addChangeListener(e -> {
+                boolean result = viewModel.setInitialRam((Integer) initialMemory.getValue());
 
-                    if ((Integer) s.getValue() > 512 && !initialMemoryWarningShown) {
-                        initialMemoryWarningShown = true;
-                        int ret = DialogManager.yesNoDialog().setTitle(GetText.tr("Warning"))
-                                .setType(DialogManager.WARNING)
-                                .setContent(GetText.tr(
-                                        "Setting initial memory above 512MB is not recommended and can cause issues. Are you sure you want to do this?"))
-                                .show();
+                if (result) {
+                    viewModel.setInitialMemoryWarningShown();
+                    int ret = DialogManager.yesNoDialog().setTitle(GetText.tr("Warning"))
+                            .setType(DialogManager.WARNING)
+                            .setContent(GetText.tr(
+                                    "Setting initial memory above 512MB is not recommended and can cause issues. Are you sure you want to do this?"))
+                            .show();
 
-                        if (ret != 0) {
-                            initialMemory.setValue(512);
-                        }
+                    if (ret != 0) {
+                        viewModel.setInitialRam(512);
                     }
                 }
             });
             add(initialMemory, gbc);
+            addDisposable(viewModel.getInitialRam().subscribe(initialMemory::setValue));
         }
 
         // Maximum Memory Settings
@@ -176,7 +133,7 @@ public class JavaSettingsTab extends AbstractSettingsTab implements Relocalizati
         gbc.gridy++;
         gbc.insets = UIConstants.LABEL_INSETS;
         gbc.anchor = GridBagConstraints.BASELINE_TRAILING;
-        maximumMemoryLabel = new JLabelWithHover(GetText.tr("Maximum Memory/Ram") + ":", HELP_ICON,
+        JLabelWithHover maximumMemoryLabel = new JLabelWithHover(GetText.tr("Maximum Memory/Ram") + ":", HELP_ICON,
                 new HTMLBuilder().center().split(100)
                         .text(GetText.tr("The maximum amount of memory/ram to allocate when starting Minecraft."))
                         .build());
@@ -184,7 +141,7 @@ public class JavaSettingsTab extends AbstractSettingsTab implements Relocalizati
 
         JPanel maximumMemoryPanel = new JPanel();
         maximumMemoryPanel.setLayout(new FlowLayout(FlowLayout.RIGHT, 0, 0));
-        if (!Java.is64Bit()) {
+        if (viewModel.isJava32Bit()) {
             maximumMemoryPanel.add(new JLabelWithHover(WARNING_ICON, new HTMLBuilder().center().split(100).text(GetText
                     .tr("You're running a 32 bit Java and therefore cannot use more than 1GB of Ram. Please see http://atl.pw/32bit for help."))
                     .build(), RESTART_BORDER));
@@ -198,21 +155,13 @@ public class JavaSettingsTab extends AbstractSettingsTab implements Relocalizati
         gbc.anchor = GridBagConstraints.BASELINE_LEADING;
         SpinnerNumberModel maximumMemoryModel = new SpinnerNumberModel(App.settings.maximumMemory, null, null, 512);
         maximumMemoryModel.setMinimum(512);
-        maximumMemoryModel.setMaximum((systemRam == 0 ? null : systemRam));
-        maximumMemory = new JSpinner(maximumMemoryModel);
+        maximumMemoryModel.setMaximum(maximumSystemRamForSpinnerModels);
+        JSpinner maximumMemory = new JSpinner(maximumMemoryModel);
         ((JSpinner.DefaultEditor) maximumMemory.getEditor()).getTextField().setColumns(5);
-        maximumMemory.addChangeListener(new ChangeListener() {
-            @Override
-            public void stateChanged(ChangeEvent e) {
-                JSpinner s = (JSpinner) e.getSource();
-                if (ConfigManager.getConfigItem("removeInitialMemoryOption", false) == false) {
-                    // if initial memory is larger than maximum memory, make initial memory match
-                    if ((Integer) initialMemory.getValue() > (Integer) s.getValue()) {
-                        initialMemory.setValue(s.getValue());
-                    }
-                }
-            }
+        maximumMemory.addChangeListener(e -> {
+            viewModel.setMaxRam((Integer) maximumMemory.getValue());
         });
+        addDisposable(viewModel.getMaxRam().subscribe(maximumMemory::setValue));
         add(maximumMemory, gbc);
 
         // Perm Gen Settings
@@ -220,7 +169,7 @@ public class JavaSettingsTab extends AbstractSettingsTab implements Relocalizati
         gbc.gridy++;
         gbc.insets = UIConstants.LABEL_INSETS;
         gbc.anchor = GridBagConstraints.BASELINE_TRAILING;
-        permGenLabel = new JLabelWithHover(GetText.tr("PermGen Size") + ":", HELP_ICON,
+        JLabelWithHover permGenLabel = new JLabelWithHover(GetText.tr("PermGen Size") + ":", HELP_ICON,
                 GetText.tr("The PermGen Size for java to use when launching Minecraft in MB."));
         add(permGenLabel, gbc);
 
@@ -229,30 +178,27 @@ public class JavaSettingsTab extends AbstractSettingsTab implements Relocalizati
         gbc.anchor = GridBagConstraints.BASELINE_LEADING;
         SpinnerNumberModel permGenModel = new SpinnerNumberModel(App.settings.metaspace, null, null, 32);
         permGenModel.setMinimum(32);
-        permGenModel.setMaximum((systemRam == 0 ? null : systemRam));
-        permGen = new JSpinner(permGenModel);
+        permGenModel.setMaximum(maximumSystemRamForSpinnerModels);
+        JSpinner permGen = new JSpinner(permGenModel);
         ((JSpinner.DefaultEditor) permGen.getEditor()).getTextField().setColumns(3);
-        permGen.addChangeListener(new ChangeListener() {
-            @Override
-            public void stateChanged(ChangeEvent e) {
-                JSpinner s = (JSpinner) e.getSource();
-                int permGenMaxRecommendedSize = (OS.is64Bit() ? 256 : 128);
+        permGen.addChangeListener(e -> {
+            boolean result = viewModel.setPermGen((Integer) permGen.getValue());
 
-                if ((Integer) s.getValue() > permGenMaxRecommendedSize && !permgenWarningShown) {
-                    permgenWarningShown = true;
-                    int ret = DialogManager.yesNoDialog().setTitle(GetText.tr("Warning"))
-                            .setType(DialogManager.WARNING)
-                            .setContent(GetText.tr(
-                                    "Setting PermGen size above {0}MB is not recommended and can cause issues. Are you sure you want to do this?",
-                                    permGenMaxRecommendedSize))
-                            .show();
+            if (result) {
+                viewModel.setPermgenWarningShown();
+                int ret = DialogManager.yesNoDialog().setTitle(GetText.tr("Warning"))
+                        .setType(DialogManager.WARNING)
+                        .setContent(GetText.tr(
+                                "Setting PermGen size above {0}MB is not recommended and can cause issues. Are you sure you want to do this?",
+                                viewModel.getPermGenMaxRecommendSize()))
+                        .show();
 
-                    if (ret != 0) {
-                        permGen.setValue(permGenMaxRecommendedSize);
-                    }
+                if (ret != 0) {
+                    permGen.setValue(viewModel.getPermGenMaxRecommendSize());
                 }
             }
         });
+        addDisposable(viewModel.getMetaspace().subscribe(permGen::setValue));
         add(permGen, gbc);
 
         // Window Size
@@ -261,7 +207,7 @@ public class JavaSettingsTab extends AbstractSettingsTab implements Relocalizati
         gbc.gridwidth = 1;
         gbc.insets = UIConstants.LABEL_INSETS;
         gbc.anchor = GridBagConstraints.BELOW_BASELINE_TRAILING;
-        windowSizeLabel = new JLabelWithHover(GetText.tr("Window Size") + ":", HELP_ICON,
+        JLabelWithHover windowSizeLabel = new JLabelWithHover(GetText.tr("Window Size") + ":", HELP_ICON,
                 GetText.tr("The size that the Minecraft window should open as, Width x Height, in pixels."));
         add(windowSizeLabel, gbc);
 
@@ -274,31 +220,36 @@ public class JavaSettingsTab extends AbstractSettingsTab implements Relocalizati
 
         SpinnerNumberModel widthModel = new SpinnerNumberModel(App.settings.windowWidth, 1, OS.getMaximumWindowWidth(),
                 1);
-        widthField = new JSpinner(widthModel);
+        JSpinner widthField = new JSpinner(widthModel);
         widthField.setEditor(new JSpinner.NumberEditor(widthField, "#"));
+        widthField.addChangeListener(e -> viewModel.setWidth((Integer) widthModel.getValue()));
+        addDisposable(viewModel.getWidth().subscribe(widthModel::setValue));
 
         SpinnerNumberModel heightModel = new SpinnerNumberModel(App.settings.windowHeight, 1,
                 OS.getMaximumWindowHeight(), 1);
-        heightField = new JSpinner(heightModel);
+        JSpinner heightField = new JSpinner(heightModel);
         heightField.setEditor(new JSpinner.NumberEditor(heightField, "#"));
+        heightField.addChangeListener(e -> viewModel.setHeight((Integer) heightField.getValue()));
+        addDisposable(viewModel.getHeight().subscribe(heightField::setValue));
 
-        commonScreenSizes = new JComboBox<>();
-        commonScreenSizes.addItem("Select An Option");
+        JComboBox<ComboItem<ScreenResolution>> commonScreenSizes = new JComboBox<>();
+        commonScreenSizes.addItem(new ComboItem<>(null, "Select An Option"));
 
-        for (String screenSize : Constants.SCREEN_RESOLUTIONS) {
-            String[] size = screenSize.split("x");
-            if (OS.getMaximumWindowWidth() >= Integer.parseInt(size[0])
-                    && OS.getMaximumWindowHeight() >= Integer.parseInt(size[1])) {
-                commonScreenSizes.addItem(screenSize);
-            }
+        for (ScreenResolution resolution : viewModel.getScreenResolutions()) {
+            commonScreenSizes.addItem(new ComboItem<>(resolution, resolution.toString()));
         }
         commonScreenSizes.addActionListener(e -> {
-            String selected = (String) commonScreenSizes.getSelectedItem();
-            if (selected.contains("x")) {
-                String[] parts = selected.split("x");
-                widthField.setValue(Integer.parseInt(parts[0]));
-                heightField.setValue(Integer.parseInt(parts[1]));
-            }
+            Object selectedItem = commonScreenSizes.getSelectedItem();
+            if (selectedItem == null)
+                return;
+
+            @SuppressWarnings("unchecked")
+            ComboItem<ScreenResolution> selected = (ComboItem<ScreenResolution>) selectedItem;
+
+            ScreenResolution screenResolution = selected.getValue();
+
+            if (screenResolution != null)
+                viewModel.setScreenResolution(screenResolution);
         });
         commonScreenSizes.setPreferredSize(new Dimension(commonScreenSizes.getPreferredSize().width + 10,
                 commonScreenSizes.getPreferredSize().height));
@@ -320,7 +271,7 @@ public class JavaSettingsTab extends AbstractSettingsTab implements Relocalizati
         gbc.gridwidth = 1;
         gbc.insets = UIConstants.LABEL_INSETS;
         gbc.anchor = GridBagConstraints.BASELINE_TRAILING;
-        javaPathLabel = new JLabelWithHover(GetText.tr("Java Path") + ":", HELP_ICON,
+        JLabelWithHover javaPathLabel = new JLabelWithHover(GetText.tr("Java Path") + ":", HELP_ICON,
                 new HTMLBuilder().center().split(100).text(GetText.tr(
                         "This setting allows you to specify where your Java Path is. Where possible the launcher will use a version of Java provided by Minecraft to launch the instance, but in cases where one isn't available, this path will be used."))
                         .build());
@@ -338,37 +289,45 @@ public class JavaSettingsTab extends AbstractSettingsTab implements Relocalizati
         JPanel javaPathPanelBottom = new JPanel();
         javaPathPanelBottom.setLayout(new BoxLayout(javaPathPanelBottom, BoxLayout.X_AXIS));
 
-        installedJavasComboBox = new JComboBox<>();
+        JComboBox<ComboItem<String>> installedJavasComboBox = new JComboBox<>();
         installedJavasComboBox.setPreferredSize(new Dimension(516, 24));
-        List<JavaInfo> installedJavas = Java.getInstalledJavas();
 
-        installedJavasComboBox.addItem(new ComboItem<JavaInfo>(null, GetText.tr("Select Java Path To Autofill")));
+        installedJavasComboBox.addItem(new ComboItem<String>(null, GetText.tr("Select Java Path To Autofill")));
 
-        for (JavaInfo javaInfo : installedJavas) {
-            installedJavasComboBox.addItem(new ComboItem<JavaInfo>(javaInfo, javaInfo.toString()));
+        for (String javaInfo : viewModel.getJavaPaths()) {
+            installedJavasComboBox.addItem(new ComboItem<>(javaInfo, javaInfo));
         }
 
         if (installedJavasComboBox.getItemCount() != 1) {
             installedJavasComboBox.addActionListener(e -> {
-                JavaInfo selectedItem = ((ComboItem<JavaInfo>) installedJavasComboBox.getSelectedItem())
-                        .getValue();
-
-                if (selectedItem != null) {
-                    javaPath.setText(selectedItem.rootPath);
-                }
-                installedJavasComboBox.setSelectedIndex(0);
+                ComboItem<String> path = ((ComboItem<String>) installedJavasComboBox.getSelectedItem());
+                String value = path.getValue();
+                if (value != null)
+                    viewModel.setJavaPath(value);
             });
             javaPathPanelTop.add(installedJavasComboBox);
         }
 
         javaPath = new JTextField(32);
+        javaPathChecker = new JLabelWithHover("", null, null);
+        javaPath.addKeyListener(new DelayedSavingKeyListener(
+                500,
+                () -> viewModel.setJavaPath(javaPath.getText()),
+                viewModel::setJavaPathPending));
+
+        addDisposable(viewModel.getJavaPathObservable().subscribe(path -> {
+            if (!javaPath.getText().equals(path))
+                javaPath.setText(path);
+        }));
         javaPath.setText(App.settings.javaPath);
-        javaPathResetButton = new JButton(GetText.tr("Reset"));
+        addDisposable(viewModel.getJavaPathChecker().subscribe(this::setJavaPathCheckState));
+
+        JButton javaPathResetButton = new JButton(GetText.tr("Reset"));
         javaPathResetButton.addActionListener(e -> {
-            javaPath.setText(OS.getDefaultJavaPath());
-            installedJavasComboBox.setSelectedIndex(0);
+            viewModel.resetJavaPath();
+            resetJavaPathCheckLabel();
         });
-        javaBrowseButton = new JButton(GetText.tr("Browse"));
+        JButton javaBrowseButton = new JButton(GetText.tr("Browse"));
         javaBrowseButton.addActionListener(e -> {
             JFileChooser chooser = new JFileChooser();
             chooser.setCurrentDirectory(new File(javaPath.getText()));
@@ -384,15 +343,17 @@ public class JavaSettingsTab extends AbstractSettingsTab implements Relocalizati
 
                 // user selected the bin dir
                 if (!jPath.exists() && (javaExe.exists() || javaExecutable.exists())) {
-                    javaPath.setText(selectedPath.getParent().toString());
+                    viewModel.setJavaPath(selectedPath.getParent());
                 } else {
-                    javaPath.setText(selectedPath.getAbsolutePath());
+                    viewModel.setJavaPath(selectedPath.getAbsolutePath());
                 }
-                installedJavasComboBox.setSelectedIndex(0);
+                viewModel.setJavaPathPending();
             }
         });
 
         javaPathPanelBottom.add(javaPath);
+        javaPathPanelBottom.add(Box.createHorizontalStrut(5));
+        javaPathPanelBottom.add(javaPathChecker, gbc);
         javaPathPanelBottom.add(Box.createHorizontalStrut(5));
         javaPathPanelBottom.add(javaPathResetButton);
         javaPathPanelBottom.add(Box.createHorizontalStrut(5));
@@ -411,7 +372,7 @@ public class JavaSettingsTab extends AbstractSettingsTab implements Relocalizati
         gbc.gridwidth = 1;
         gbc.insets = UIConstants.LABEL_INSETS;
         gbc.anchor = GridBagConstraints.FIRST_LINE_END;
-        javaParametersLabel = new JLabelWithHover(GetText.tr("Java Parameters") + ":", HELP_ICON,
+        JLabelWithHover javaParametersLabel = new JLabelWithHover(GetText.tr("Java Parameters") + ":", HELP_ICON,
                 GetText.tr("Extra Java command line paramaters can be added here."));
         add(javaParametersLabel, gbc);
 
@@ -424,18 +385,29 @@ public class JavaSettingsTab extends AbstractSettingsTab implements Relocalizati
         javaParametersPanel.setAlignmentY(Component.TOP_ALIGNMENT);
 
         javaParameters = new JTextArea(6, 40);
-        javaParameters.setText(App.settings.javaParameters);
+        javaParamChecker = new JLabelWithHover("", null, null);
         javaParameters.setLineWrap(true);
         javaParameters.setWrapStyleWord(true);
+        javaParameters.addKeyListener(new DelayedSavingKeyListener(
+                500,
+                () -> viewModel.setJavaParams(javaParameters.getText()),
+                viewModel::setJavaParamsPending));
+        addDisposable(viewModel.getJavaParams().subscribe(params -> {
+            if (!javaParameters.getText().equals(params))
+                javaParameters.setText(params);
+        }));
+        addDisposable(viewModel.getJavaParamsChecker().subscribe(this::setJavaParamCheckState));
 
-        javaParametersResetButton = new JButton(GetText.tr("Reset"));
-        javaParametersResetButton.addActionListener(e -> javaParameters.setText(Constants.DEFAULT_JAVA_PARAMETERS));
+        JButton javaParametersResetButton = new JButton(GetText.tr("Reset"));
+        javaParametersResetButton.addActionListener(e -> viewModel.resetJavaParams());
 
         javaParametersPanel.add(javaParameters);
         javaParametersPanel.add(Box.createHorizontalStrut(5));
 
         Box paramsResetBox = Box.createVerticalBox();
         paramsResetBox.add(javaParametersResetButton);
+        paramsResetBox.add(Box.createVerticalGlue());
+        paramsResetBox.add(javaParamChecker, gbc);
         paramsResetBox.add(Box.createVerticalGlue());
         javaParametersPanel.add(paramsResetBox);
 
@@ -461,12 +433,18 @@ public class JavaSettingsTab extends AbstractSettingsTab implements Relocalizati
         JPanel baseJavaInstallFolderPanel = new JPanel();
         baseJavaInstallFolderPanel.setLayout(new BoxLayout(baseJavaInstallFolderPanel, BoxLayout.X_AXIS));
 
-        baseJavaInstallFolder = new JTextField(32);
+        JTextField baseJavaInstallFolder = new JTextField(32);
         baseJavaInstallFolder.setText(App.settings.baseJavaInstallFolder);
+        baseJavaInstallFolder.addKeyListener(new StatefulTextKeyAdapter(
+                (e) -> viewModel.setBaseInstallFolder(baseJavaInstallFolder.getText())));
+        addDisposable(viewModel.getBaseInstallFolder().subscribe(folder -> {
+            if (!baseJavaInstallFolder.getText().equals(folder))
+                baseJavaInstallFolder.setText(folder);
+        }));
+
         JButton baseJavaInstallFolderResetButton = new JButton(GetText.tr("Reset"));
-        baseJavaInstallFolderResetButton.addActionListener(e -> {
-            baseJavaInstallFolder.setText("");
-        });
+        baseJavaInstallFolderResetButton.addActionListener(e -> viewModel.resetBaseInstallFolder());
+
         JButton baseJavaInstallFolderBrowseButton = new JButton(GetText.tr("Browse"));
         baseJavaInstallFolderBrowseButton.addActionListener(e -> {
             JFileChooser chooser = new JFileChooser();
@@ -476,7 +454,7 @@ public class JavaSettingsTab extends AbstractSettingsTab implements Relocalizati
             chooser.setAcceptAllFileFilterUsed(false);
 
             if (chooser.showOpenDialog(null) == JFileChooser.APPROVE_OPTION) {
-                baseJavaInstallFolder.setText(chooser.getSelectedFile().getAbsolutePath());
+                viewModel.setBaseInstallFolder(chooser.getSelectedFile().getAbsolutePath());
             }
         });
 
@@ -494,7 +472,8 @@ public class JavaSettingsTab extends AbstractSettingsTab implements Relocalizati
         gbc.gridy++;
         gbc.insets = UIConstants.LABEL_INSETS;
         gbc.anchor = GridBagConstraints.BASELINE_TRAILING;
-        startMinecraftMaximisedLabel = new JLabelWithHover(GetText.tr("Start Minecraft Maximised") + "?", HELP_ICON,
+        JLabelWithHover startMinecraftMaximisedLabel = new JLabelWithHover(
+                GetText.tr("Start Minecraft Maximised") + "?", HELP_ICON,
                 GetText.tr(
                         "Enabling this will start Minecraft maximised so that it takes up the full size of your screen."));
         add(startMinecraftMaximisedLabel, gbc);
@@ -502,10 +481,10 @@ public class JavaSettingsTab extends AbstractSettingsTab implements Relocalizati
         gbc.gridx++;
         gbc.insets = UIConstants.CHECKBOX_FIELD_INSETS;
         gbc.anchor = GridBagConstraints.BASELINE_LEADING;
-        startMinecraftMaximised = new JCheckBox();
-        if (App.settings.maximiseMinecraft) {
-            startMinecraftMaximised.setSelected(true);
-        }
+        JCheckBox startMinecraftMaximised = new JCheckBox();
+        startMinecraftMaximised.addItemListener(
+                itemEvent -> viewModel.setStartMinecraftMax(itemEvent.getStateChange() == ItemEvent.SELECTED));
+        addDisposable(viewModel.getMaximizeMinecraft().subscribe(startMinecraftMaximised::setSelected));
         add(startMinecraftMaximised, gbc);
 
         // Ignore Java checks On Launch
@@ -514,7 +493,8 @@ public class JavaSettingsTab extends AbstractSettingsTab implements Relocalizati
         gbc.gridy++;
         gbc.insets = UIConstants.LABEL_INSETS;
         gbc.anchor = GridBagConstraints.BASELINE_TRAILING;
-        ignoreJavaOnInstanceLaunchLabel = new JLabelWithHover(GetText.tr("Ignore Java Checks On Launch") + "?",
+        JLabelWithHover ignoreJavaOnInstanceLaunchLabel = new JLabelWithHover(
+                GetText.tr("Ignore Java Checks On Launch") + "?",
                 HELP_ICON, GetText.tr(
                         "This enables ignoring errors when launching a pack that you don't have a compatible Java version for."));
         add(ignoreJavaOnInstanceLaunchLabel, gbc);
@@ -522,10 +502,10 @@ public class JavaSettingsTab extends AbstractSettingsTab implements Relocalizati
         gbc.gridx++;
         gbc.insets = UIConstants.CHECKBOX_FIELD_INSETS;
         gbc.anchor = GridBagConstraints.BASELINE_LEADING;
-        ignoreJavaOnInstanceLaunch = new JCheckBox();
-        if (App.settings.ignoreJavaOnInstanceLaunch) {
-            ignoreJavaOnInstanceLaunch.setSelected(true);
-        }
+        JCheckBox ignoreJavaOnInstanceLaunch = new JCheckBox();
+        ignoreJavaOnInstanceLaunch.addItemListener(
+                itemEvent -> viewModel.setIgnoreJavaChecks(itemEvent.getStateChange() == ItemEvent.SELECTED));
+        addDisposable(viewModel.getIgnoreJavaOnInstanceLaunch().subscribe(ignoreJavaOnInstanceLaunch::setSelected));
         add(ignoreJavaOnInstanceLaunch, gbc);
 
         // Use Java Provided By Minecraft
@@ -534,7 +514,8 @@ public class JavaSettingsTab extends AbstractSettingsTab implements Relocalizati
         gbc.gridy++;
         gbc.insets = UIConstants.LABEL_INSETS;
         gbc.anchor = GridBagConstraints.BASELINE_TRAILING;
-        useJavaProvidedByMinecraftLabel = new JLabelWithHover(GetText.tr("Use Java Provided By Minecraft") + "?",
+        JLabelWithHover useJavaProvidedByMinecraftLabel = new JLabelWithHover(
+                GetText.tr("Use Java Provided By Minecraft") + "?",
                 HELP_ICON,
                 new HTMLBuilder().center().text(GetText.tr(
                         "This allows you to enable/disable using the version of Java provided by the version of Minecraft you're running.<br/><br/>It's highly recommended to not disable this, unless you know what you're doing."))
@@ -544,26 +525,27 @@ public class JavaSettingsTab extends AbstractSettingsTab implements Relocalizati
         gbc.gridx++;
         gbc.insets = UIConstants.CHECKBOX_FIELD_INSETS;
         gbc.anchor = GridBagConstraints.BASELINE_LEADING;
-        useJavaProvidedByMinecraft = new JCheckBox();
-        useJavaProvidedByMinecraft.setSelected(App.settings.useJavaProvidedByMinecraft);
-        useJavaProvidedByMinecraft.addItemListener(new ItemListener() {
-            @Override
-            public void itemStateChanged(ItemEvent e) {
-                SwingUtilities.invokeLater(() -> {
-                    if (!useJavaProvidedByMinecraft.isSelected()) {
-                        int ret = DialogManager.yesNoDialog().setTitle(GetText.tr("Warning"))
-                                .setType(DialogManager.WARNING)
-                                .setContent(GetText.tr(
-                                        "Unchecking this is not recommended and may cause Minecraft to no longer run. Are you sure you want to do this?"))
-                                .show();
+        JCheckBox useJavaProvidedByMinecraft = new JCheckBox();
+        useJavaProvidedByMinecraft.setSelected(viewModel.getUseJavaFromMinecraftEnabled());
+        useJavaProvidedByMinecraft.addItemListener(e -> {
+            boolean enabled = e.getStateChange() == ItemEvent.SELECTED;
+            viewModel.setJavaFromMinecraft(enabled);
 
-                        if (ret != 0) {
-                            useJavaProvidedByMinecraft.setSelected(true);
-                        }
+            if (!enabled) {
+                SwingUtilities.invokeLater(() -> {
+                    int ret = DialogManager.yesNoDialog().setTitle(GetText.tr("Warning"))
+                            .setType(DialogManager.WARNING)
+                            .setContent(GetText.tr(
+                                    "Unchecking this is not recommended and may cause Minecraft to no longer run. Are you sure you want to do this?"))
+                            .show();
+
+                    if (ret != 0) {
+                        useJavaProvidedByMinecraft.setSelected(true);
                     }
                 });
             }
         });
+        addDisposable(viewModel.getUseJavaProvidedByMinecraft().subscribe(useJavaProvidedByMinecraft::setEnabled));
         add(useJavaProvidedByMinecraft, gbc);
 
         // Disable Legacy Launching
@@ -572,7 +554,8 @@ public class JavaSettingsTab extends AbstractSettingsTab implements Relocalizati
         gbc.gridy++;
         gbc.insets = UIConstants.LABEL_INSETS;
         gbc.anchor = GridBagConstraints.BASELINE_TRAILING;
-        disableLegacyLaunchingLabel = new JLabelWithHover(GetText.tr("Disable Legacy Launching") + "?", HELP_ICON,
+        JLabelWithHover disableLegacyLaunchingLabel = new JLabelWithHover(GetText.tr("Disable Legacy Launching") + "?",
+                HELP_ICON,
                 new HTMLBuilder().center().text(GetText.tr(
                         "This allows you to disable legacy launching for Minecraft < 1.6.<br/><br/>It's highly recommended to not disable this, unless you're having issues launching older Minecraft versions."))
                         .build());
@@ -581,8 +564,11 @@ public class JavaSettingsTab extends AbstractSettingsTab implements Relocalizati
         gbc.gridx++;
         gbc.insets = UIConstants.CHECKBOX_FIELD_INSETS;
         gbc.anchor = GridBagConstraints.BASELINE_LEADING;
-        disableLegacyLaunching = new JCheckBox();
-        disableLegacyLaunching.setSelected(App.settings.disableLegacyLaunching);
+        JCheckBox disableLegacyLaunching = new JCheckBox();
+        disableLegacyLaunching.addItemListener(
+                itemEvent -> viewModel.setDisableLegacyLaunching(itemEvent.getStateChange() == ItemEvent.SELECTED));
+        addDisposable(
+                viewModel.getDisableLegacyLaunching().subscribe(disableLegacyLaunching::setSelected));
         add(disableLegacyLaunching, gbc);
 
         // Use System GLFW
@@ -591,15 +577,18 @@ public class JavaSettingsTab extends AbstractSettingsTab implements Relocalizati
         gbc.gridy++;
         gbc.insets = UIConstants.LABEL_INSETS;
         gbc.anchor = GridBagConstraints.BASELINE_TRAILING;
-        useSystemGlfwLabel = new JLabelWithHover(GetText.tr("Use System GLFW") + "?", HELP_ICON, new HTMLBuilder()
-                .center().text(GetText.tr("Use the systems install for GLFW native library.")).build());
+        JLabelWithHover useSystemGlfwLabel = new JLabelWithHover(GetText.tr("Use System GLFW") + "?", HELP_ICON,
+                new HTMLBuilder()
+                        .center().text(GetText.tr("Use the systems install for GLFW native library.")).build());
         add(useSystemGlfwLabel, gbc);
 
         gbc.gridx++;
         gbc.insets = UIConstants.CHECKBOX_FIELD_INSETS;
         gbc.anchor = GridBagConstraints.BASELINE_LEADING;
-        useSystemGlfw = new JCheckBox();
-        useSystemGlfw.setSelected(App.settings.useSystemGlfw);
+        JCheckBox useSystemGlfw = new JCheckBox();
+        useSystemGlfw.addItemListener(
+                itemEvent -> viewModel.setSystemGLFW(itemEvent.getStateChange() == ItemEvent.SELECTED));
+        addDisposable(viewModel.getSystemGLFW().subscribe(useSystemGlfw::setSelected));
         add(useSystemGlfw, gbc);
 
         // Use System OpenAL
@@ -608,84 +597,47 @@ public class JavaSettingsTab extends AbstractSettingsTab implements Relocalizati
         gbc.gridy++;
         gbc.insets = UIConstants.LABEL_INSETS;
         gbc.anchor = GridBagConstraints.BASELINE_TRAILING;
-        useSystemOpenAlLabel = new JLabelWithHover(GetText.tr("Use System OpenAL") + "?", HELP_ICON, new HTMLBuilder()
-                .center().text(GetText.tr("Use the systems install for OpenAL native library.")).build());
+        JLabelWithHover useSystemOpenAlLabel = new JLabelWithHover(GetText.tr("Use System OpenAL") + "?", HELP_ICON,
+                new HTMLBuilder()
+                        .center().text(GetText.tr("Use the systems install for OpenAL native library.")).build());
         add(useSystemOpenAlLabel, gbc);
 
         gbc.gridx++;
         gbc.insets = UIConstants.CHECKBOX_FIELD_INSETS;
         gbc.anchor = GridBagConstraints.BASELINE_LEADING;
-        useSystemOpenAl = new JCheckBox();
-        useSystemOpenAl.setSelected(App.settings.useSystemOpenAl);
+        JCheckBox useSystemOpenAl = new JCheckBox();
+        useSystemOpenAl.addItemListener(
+                itemEvent -> viewModel.setSystemOpenAL(itemEvent.getStateChange() == ItemEvent.SELECTED));
+        addDisposable(viewModel.getSystemOpenAL().subscribe(useSystemOpenAl::setSelected));
         add(useSystemOpenAl, gbc);
-
-        // Use Dedicated GPU
-        if (OS.isLinux()) {
-            gbc.gridx = 0;
-            gbc.gridy++;
-            gbc.insets = UIConstants.LABEL_INSETS;
-            gbc.anchor = GridBagConstraints.BASELINE_TRAILING;
-            useDedicatedGpuLabel = new JLabelWithHover(GetText.tr("Use Dedicated GPU") + "?", HELP_ICON,
-                    new HTMLBuilder().center().text(GetText.tr("Use the dedicated GPU for rendering.")).build());
-            add(useDedicatedGpuLabel, gbc);
-
-            gbc.gridx++;
-            gbc.insets = UIConstants.CHECKBOX_FIELD_INSETS;
-            gbc.anchor = GridBagConstraints.BASELINE_LEADING;
-            useDedicatedGpu = new JCheckBox();
-            useDedicatedGpu.setSelected(App.settings.useDedicatedGpu);
-            add(useDedicatedGpu, gbc);
-        }
     }
 
-    public boolean isValidJavaPath() {
-        File jPath = new File(javaPath.getText(), "bin");
-        if (!jPath.exists()) {
-            DialogManager.okDialog().setTitle(GetText.tr("Help")).setContent(new HTMLBuilder().center().text(GetText.tr(
-                    "The Java Path you set is incorrect.<br/><br/>Please verify it points to the folder where the bin folder is and try again."))
-                    .build()).setType(DialogManager.ERROR).show();
-            return false;
-        }
-        return true;
+    private void showJavaPathWarning() {
+        DialogManager.okDialog()
+                .setTitle(GetText.tr("Help"))
+                .setContent(
+                        new HTMLBuilder()
+                                .center()
+                                .text(
+                                        GetText.tr(
+                                                "The Java Path you set is incorrect.<br/><br/>Please verify it points to the folder where the bin folder is and try again."))
+                                .build())
+                .setType(DialogManager.ERROR)
+                .show();
     }
 
-    public boolean isValidJavaParamaters() {
-        if ((ConfigManager.getConfigItem("removeInitialMemoryOption", false) == false
-                && javaParameters.getText().contains("-Xms")) || javaParameters.getText().contains("-Xmx")
-                || javaParameters.getText().contains("-XX:PermSize")
-                || javaParameters.getText().contains("-XX:MetaspaceSize")) {
-            DialogManager.okDialog().setTitle(GetText.tr("Help")).setContent(new HTMLBuilder().center().text(GetText.tr(
-                    "The entered Java Parameters were incorrect.<br/><br/>Please remove any references to Xmx, Xms or XX:PermSize."))
-                    .build()).setType(DialogManager.ERROR).show();
-            return false;
-        }
-        return true;
-    }
-
-    public void save() {
-        if (ConfigManager.getConfigItem("removeInitialMemoryOption", false) == false) {
-            App.settings.initialMemory = (Integer) initialMemory.getValue();
-        }
-
-        App.settings.maximumMemory = (Integer) maximumMemory.getValue();
-        App.settings.metaspace = (Integer) permGen.getValue();
-        App.settings.windowWidth = (Integer) widthField.getValue();
-        App.settings.windowHeight = (Integer) heightField.getValue();
-        App.settings.javaPath = javaPath.getText();
-        App.settings.usingCustomJavaPath = !javaPath.getText().equalsIgnoreCase(OS.getDefaultJavaPath());
-        App.settings.javaParameters = javaParameters.getText();
-        App.settings.maximiseMinecraft = startMinecraftMaximised.isSelected();
-        App.settings.ignoreJavaOnInstanceLaunch = ignoreJavaOnInstanceLaunch.isSelected();
-        App.settings.useJavaProvidedByMinecraft = useJavaProvidedByMinecraft.isSelected();
-        App.settings.baseJavaInstallFolder = baseJavaInstallFolder.getText().isEmpty() ? null
-                : baseJavaInstallFolder.getText();
-        App.settings.disableLegacyLaunching = disableLegacyLaunching.isSelected();
-        App.settings.useSystemGlfw = useSystemGlfw.isSelected();
-        App.settings.useSystemOpenAl = useSystemOpenAl.isSelected();
-
-        if (OS.isLinux()) {
-            App.settings.useDedicatedGpu = useDedicatedGpu.isSelected();
-        }
+    private void showJavaParamWarning() {
+        DialogManager.okDialog()
+                .setTitle(GetText.tr("Help"))
+                .setContent(
+                        new HTMLBuilder()
+                                .center()
+                                .text(
+                                        GetText.tr(
+                                                "The entered Java Parameters were incorrect.<br/><br/>Please remove any references to Xmx, Xms or XX:PermSize."))
+                                .build())
+                .setType(DialogManager.ERROR)
+                .show();
     }
 
     @Override
@@ -699,65 +651,76 @@ public class JavaSettingsTab extends AbstractSettingsTab implements Relocalizati
     }
 
     @Override
-    public void onRelocalization() {
-        if (ConfigManager.getConfigItem("removeInitialMemoryOption", false) == false) {
-            this.initialMemoryLabelWarning.setToolTipText(new HTMLBuilder().center().split(100).text(GetText.tr(
-                    "You're running a 32 bit Java and therefore cannot use more than 1GB of Ram. Please see http://atl.pw/32bit for help."))
-                    .build());
+    protected void createViewModel() {
+    }
 
-            this.initialMemoryLabel.setText(GetText.tr("Initial Memory/Ram") + ":");
-            this.initialMemoryLabel.setToolTipText(new HTMLBuilder().center().split(100).text(GetText.tr(
-                    "Initial memory/ram is the starting amount of memory/ram to use when starting Minecraft. This should be left at the default of 512 MB unless you know what your doing."))
-                    .build());
+    private void setLabelState(JLabelWithHover label, String tooltip, String path) {
+        try {
+            label.setToolTipText(tooltip);
+            ImageIcon icon = Utils.getIconImage(path);
+            if (icon != null) {
+                label.setIcon(icon);
+                icon.setImageObserver(label);
+            }
+        } catch (NullPointerException ignored) {
         }
+    }
 
-        this.maximumMemoryLabel.setText(GetText.tr("Maximum Memory/Ram") + ":");
-        this.maximumMemoryLabel.setToolTipText(new HTMLBuilder().center().split(100)
-                .text(GetText.tr("The maximum amount of memory/ram to allocate when starting Minecraft.")).build());
+    private void resetJavaPathCheckLabel() {
+        setLabelState(javaPathChecker, "Visualize java path checker", "/assets/icon/question.png");
+    }
 
-        this.permGenLabel.setText(GetText.tr("PermGen Size") + ":");
-        this.permGenLabel
-                .setToolTipText(GetText.tr("The PermGen Size for java to use when launching Minecraft in MB."));
+    private void setJavaPathCheckState(CheckState state) {
+        if (state == CheckState.NotChecking) {
+            resetJavaPathCheckLabel();
+        } else if (state == CheckState.CheckPending) {
+            setLabelState(javaPathChecker, "Java path change pending", "/assets/icon/warning.png");
+        } else if (state == CheckState.Checking) {
+            setLabelState(javaPathChecker, "Checking java path", "/assets/image/loading-bars-small.gif");
 
-        this.windowSizeLabel.setText(GetText.tr("Window Size") + ":");
-        this.windowSizeLabel.setToolTipText(
-                GetText.tr("The size that the Minecraft window should open as, Width x Height, in pixels."));
+            javaPath.setEnabled(false);
+        } else if (state instanceof CheckState.Checked) {
+            if (((CheckState.Checked) state).valid) {
+                resetJavaPathCheckLabel();
+            } else {
+                setLabelState(javaPathChecker, "Invalid!", "/assets/icon/error.png");
+                showJavaPathWarning();
+            }
+            javaPath.setEnabled(true);
+        }
+    }
 
-        this.javaPathLabel.setText(GetText.tr("Java Path") + ":");
-        this.javaPathLabel.setToolTipText(new HTMLBuilder().center().split(100).text(GetText.tr(
-                "This setting allows you to specify where your Java Path is. This should be left as default, but if you know what your doing just set this to the path where the bin folder is for the version of Java you want to use If you mess up, click the Reset button to go back to the default"))
-                .build());
+    private void resetJavaParamCheckLabel() {
+        setLabelState(javaParamChecker, "Visualize java param checker", "/assets/icon/question.png");
 
-        this.javaPathResetButton.setText(GetText.tr("Reset"));
+    }
 
-        this.javaBrowseButton.setText(GetText.tr("Browse"));
+    private void setJavaParamCheckState(CheckState state) {
+        if (state == CheckState.NotChecking) {
+            resetJavaParamCheckLabel();
+        } else if (state == CheckState.CheckPending) {
+            setLabelState(javaParamChecker, "Java params change pending", "/assets/icon/warning.png");
+        } else if (state == CheckState.Checking) {
+            setLabelState(javaParamChecker, "Checking java params", "/assets/image/loading-bars-small.gif");
 
-        this.javaParametersLabel.setText(GetText.tr("Java Parameters") + ":");
-        this.javaParametersLabel.setToolTipText(GetText.tr("Extra Java command line paramaters can be added here."));
-
-        this.javaParametersResetButton.setText(GetText.tr("Reset"));
-
-        this.startMinecraftMaximisedLabel.setText(GetText.tr("Start Minecraft Maximised") + "?");
-        this.startMinecraftMaximisedLabel.setToolTipText(GetText
-                .tr("Enabling this will start Minecraft maximised so that it takes up the full size of your screen."));
-
-        this.ignoreJavaOnInstanceLaunchLabel.setText(GetText.tr("Ignore Java Checks On Launch") + "?");
-        this.ignoreJavaOnInstanceLaunchLabel.setToolTipText(GetText.tr(
-                "This enables ignoring errors when launching a pack that you don't have a compatible Java version for."));
-
-        this.useJavaProvidedByMinecraftLabel.setText(GetText.tr("Use Java Provided By Minecraft") + "?");
-        this.useJavaProvidedByMinecraftLabel.setToolTipText(new HTMLBuilder().center().text(GetText.tr(
-                "This allows you to enable/disable using the version of Java provided by the version of Minecraft you're running.<br/><br/>It's highly recommended to not disable this, unless you know what you're doing."))
-                .build());
-
-        this.disableLegacyLaunchingLabel.setText(GetText.tr("Disable Legacy Launching") + "?");
-        this.disableLegacyLaunchingLabel.setToolTipText(new HTMLBuilder().center().text(GetText.tr(
-                "This allows you to disable legacy launching for Minecraft < 1.6.<br/><br/>It's highly recommended to not disable this, unless you're having issues launching older Minecraft versions."))
-                .build());
+            javaParameters.setEnabled(false);
+        } else if (state instanceof CheckState.Checked) {
+            if (((CheckState.Checked) state).valid) {
+                resetJavaParamCheckLabel();
+            } else {
+                setLabelState(javaParamChecker, "Invalid!", "/assets/icon/error.png");
+                showJavaParamWarning();
+            }
+            javaParameters.setEnabled(true);
+        }
     }
 
     @Override
-    public void onSettingsSaved() {
-        javaPath.setText(App.settings.javaPath);
+    protected void onDestroy() {
+        removeAll();
+        javaPath = null;
+        javaPathChecker = null;
+        javaParamChecker = null;
+        javaParameters = null;
     }
 }
